# tdd_embedded_c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: Coverage.cmake
src/: CMakeLists.txt  CircularBuffer.c  FakeMicroTime.c  FakeRandomMinute.cpp  FakeRandomMinute.h  FakeTimeService.cpp  FakeTimeService.h  Flash.c  Flash.h  FormatOutputSpy.cpp  FormatOutputSpy.h  IO.c  IO.h  LedDriver_helpers.c  LedDriver_helpers.h  LightController.h  LightControllerSpy.cpp  LightControllerSpy.h  LightScheduler.cpp  LightScheduler.h  Makefile  RandomMinute.cpp  RandomMinute.h  RuntimeError.h  TimeService.h  Utils.h
src/CircularBuffer/: CMakeLists.txt  CircularBuffer.c  CircularBuffer.h  Utils.c
src/Flash/: CMakeLists.txt  FakeMicroTime.h  Flash.c  IO.c
src/LedDriver/: CMakeLists.txt  LedDriver.c  LedDriver.h
src/LightScheduler/: CMakeLists.txt  FakeTimeService.h  FormatOutputSpy.cpp  LightController.h  LightControllerSpy.h  LightScheduler.h
test/: CMakeLists.txt  FakeTimeServiceTest.cpp  LightControllerSpyTest.cpp  LightSchedulerTest.cpp  Makefile  ModuleTest.cpp
test/cppUTests/: CMakeLists.txt  FakeTimeServiceTest.cpp  FormatOutputSpyTest.cpp  LightSchedulerRandomizeTest.cpp  LightSchedulerTest.cpp  RandomMinuteTest.cpp
test/cppUTests/CircularBuffer/: CMakeLists.txt  CircularBufferPrintTest.cpp
test/cppUTests/LightScheduler/: CMakeLists.txt  LightControllerSpyTest.cpp  LightSchedulerTest.cpp
test/cpputest/: CMakeLists.txt
test/cpputest/CircularBuffer/: CMakeLists.txt
test/cpputest/LightScheduler/: LightSchedulerInitAndCleanupTest.cpp
test/mocks/: CTestTestfile.cmake  Makefile  RuntimeErrorStub.c  cmake_install.cmake
test/unity/: CMakeLists.txt  maconfig.yml
test/unity/Flash/: CMakeLists.txt
test/unity/LedDriver/: LedDriverTest.c
test/unity/LedDriver/mocks/: MockIO.h
test/unityTests/: CMakeLists.txt  FlashTest.c  maconfig.yml
test/unityTests/Flash/: CMakeLists.txt
test/unityTests/LedDriver/: CMakeLists.txt
test/unityTests/LedDriver/mocks/: CMakeLists.txt  MockIO.c
test/unityTests/mocks/: CMakeLists.txt  RuntimeErrorStub.h
